// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyReservationsScreen.styles THEN Container SHOULD match with snapshot when is show 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
/>
`;

exports[`MyReservationsScreen.styles THEN ItemList SHOULD match with snapshot when is show 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "paddingBottom": 5,
      "paddingLeft": 5,
      "paddingRight": 5,
      "paddingTop": 5,
    }
  }
/>
`;

exports[`MyReservationsScreen.styles THEN TextItem SHOULD match with snapshot when is show 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontSize": 15,
        "fontWeight": "bold",
      },
    ]
  }
/>
`;

exports[`MyReservationsScreen.styles THEN TextSubValue SHOULD match with snapshot when is show 1`] = `
<Text
  style={
    Array [
      Object {
        "fontSize": 13,
      },
    ]
  }
/>
`;

exports[`MyReservationsScreen.styles THEN TextSubtitle SHOULD match with snapshot when is show 1`] = `
<Text
  style={
    Array [
      Object {
        "fontSize": 10,
      },
    ]
  }
/>
`;
